--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,34 @@
+/* COMMON */
 body {
-  color: red;
-  font-size: 100px;
+  color: #333;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.4; 
   font-family: "Nanum Gothic", sans-serif;
 }
+img {
+  display: block; /* 블로요소로 변경 */
+}
+
+
+
+/*Header*/
+header {
+  background-color: royalblue;
+}
+header .inner {
+  width: 1100px;
+  height: 120px;
+  margin: 0 auto;
+  background-color: orange;
+  position: relative;        /* 자식요소에 절대위치 사용하기 위해 부모요소에 상대위치 사용 */
+}
+header .logo {
+  height: 75px;              /* 로고의 높이를 75px로 설정 */
+  position: absolute;        /* 절대 위치로 설정하여 상위 요소 기준으로 위치 지정 */
+  top: 0px;                  /* 상단에서 0px 거리 */
+  bottom: 0px;               /* 하단에서도 0px 거리 */
+  left: 0px;                /* 왼쪽에서 0px 거리 */
+  margin: auto;              /* 위, 아래 margin을 auto로 설정하여 수직 중앙 정렬 */
+}
+
