--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,57 @@ a {
   margin: 0 auto;                     /* 가운데 정렬 */
   position: relative;                /* 자식 요소의 absolute 위치 기준점 */
 }
-
+/*BUTTON*/
+.btn {
+  width: 130px;
+  padding: 10px;
+  border: 2px solid #333;
+  border-radius: 4px;
+  color: #333;
+  font-size: 16px;
+  font-weight: 700;
+  text-align: center;
+  cursor: pointer;
+  box-sizing: border-box;
+  display: block;
+  transition: .4s;
+}
+.btn:hover {
+  background-color: #333;
+  color: #FFF;
+}
+.btn.btn--reverse {
+  background-color: #333;
+  color: #FFF;
+}
+.btn.btn--reverse:hover {
+  background-color: transparent;
+  color: #333;
+}
+.btn.btn--brown {
+  color: #592B18;
+  border-color: #592B18;
+}
+.btn.btn--brown:hover {
+  color: #FFF;
+  background-color: #592B18;
+}
+.btn.btn--gold {
+  color: #D9AA8A;
+  border-color: #D9AA8A;
+}
+.btn.btn--gold:hover {
+  color: #FFF;
+  background-color: #D9AA8A;
+}
+.btn.btn--white {
+  color: #FFF;
+  border-color: #FFF;
+}
+.btn.btn--white:hover {
+  color: #333;
+  background-color: #FFF;
+}
 /* ========== 헤더 영역 ========== */
 header {
   width: 100%;
@@ -26,6 +76,7 @@ header {
   background-color: #F6F5F0;         /* 밝은 베이지 배경색 */
   border-bottom: 1px solid #c8c8c8;  /* 하단 테두리로 구분선 */
   top: 0;
+  z-index: 9;
 }
 header > .inner {
   height: 120px;                      /* 헤더의 세로 높이 고정 */
@@ -199,3 +250,46 @@ header .badges .badge{
   box-shadow: 4px 4px 10px rgba(0,0,0,.15);
   cursor: pointer;
 } 
+
+/*VISUAL*/
+.visual {
+  margin-top: 120px;
+  background-image: url("../images/visual_bg.jpg");
+  background-position: center;
+}
+.visual .inner {
+  height: 646px;
+}
+.visual .title {
+  position: absolute;
+  top: 88px;
+  left: -10px;
+}
+.visual .title .btn {
+  
+}
+.visual .cup1.image {
+  position: absolute;
+  bottom: 0;
+  right: -47px;
+}
+.visual .cup1.text {
+  position: absolute;
+  top: 38px;
+  right: 171px;
+}
+.visual .cup2.image {
+  position: absolute;
+  bottom: 0;
+  right: 162px;
+}
+.visual .cup2.text {
+  position: absolute;
+  top: 321px;
+  right: 416px;
+}
+.visual .spoon {
+  position: absolute;
+  bottom: 0;
+  left: 275px;
+}
