--- a/css/main.css
+++ b/css/main.css
@@ -389,6 +389,11 @@ header .badges .badge{
   height: 693px;
   background-color: #f6f5ef;
   position: relative;
+  transition: height .4s;
+  overflow: hidden;
+}
+.notice .promotion.hide {
+  height: 0;
 }
 .notice .promotion .swiper-container {
   width: calc(819px * 3 + 20px);
@@ -456,9 +461,9 @@ header .badges .badge{
   right: 50%;
   margin-right: -480px;
 }
-.notice .promotion .swiper-prev:hover {
-  background-color: #333;
-  
-}
+.notice .promotion .swiper-prev:hover,
 .notice .promotion .swiper-next:hover {
+  background-color: #333;
+  color: #fff;
+
 }
