--- a/css/main.css
+++ b/css/main.css
@@ -238,20 +238,20 @@ header .main-menu .item .item__contents .contents__texture p {
   color: #64a70b;                  /* 라임빛 녹색 포인트 */
   margin: 4px 0 14px;              /* 위아래 간격 */
 }
+/* BADGES (헤더 뱃지) */
 header .badges {
   position: absolute;
   top: 132px;
   right: 12px;
 }
-header .badges .badge{
+header .badges .badge {
   border-radius: 10px;
   overflow: hidden;
   margin-bottom: 12px;
   box-shadow: 4px 4px 10px rgba(0,0,0,.15);
   cursor: pointer;
-} 
-
-/*VISUAL*/
+}
+/* VISUAL SECTION */
 .visual {
   margin-top: 120px;
   background-image: url("../images/visual_bg.jpg");
@@ -299,10 +299,9 @@ header .badges .badge{
   opacity: 0;
 }
 
-/* NOTICE */
-.notice {
+/* NOTICE LINE (공지 슬라이드 + 버튼) */
+.notice {}
 
-}
 .notice .notice-line {
   position: relative;
 }
@@ -343,15 +342,14 @@ header .badges .badge{
   height: 62px;
   flex-grow: 1;
 }
-.notice .notice-line .inner__left .swiper-slide{
+.notice .notice-line .inner__left .swiper-slide {
   height: 62px;
   display: flex;
   align-items: center;
 }
-.notice .notice-line .inner__left .swiper-slide a{
+.notice .notice-line .inner__left .swiper-slide a {
   color: #FFF;
 }
-
 .notice .notice-line .inner__left .notice-line__more {
   width: 62px;
   height: 62px;
@@ -370,9 +368,8 @@ header .badges .badge{
   justify-content: flex-end;
   align-items: center;
 }
-.notice .notice-line .inner__right h2{
+.notice .notice-line .inner__right h2 {}
 
-}
 .notice .notice-line .inner__right .toggle-promotion {
   width: 62px;
   height: 62px;
@@ -383,33 +380,36 @@ header .badges .badge{
 }
 .notice .notice-line .inner__right .toggle-promotion .material-icons {
   font-size: 30px;
-
 }
+
+/* ========================= */
+/* PROMOTION (접이식 프로모션 슬라이드) */
+/* ========================= */
 .notice .promotion {
   height: 693px;
   background-color: #f6f5ef;
   position: relative;
-  transition: height .4s;
+  transition: height 0.4s;
   overflow: hidden;
 }
 .notice .promotion.hide {
-  height: 0;
+  height: 0; /* 숨길 때 높이를 0으로 줄여서 접힘 효과 */
 }
 .notice .promotion .swiper-container {
-  width: calc(819px * 3 + 20px);
+  width: calc(819px * 3 + 20px); /* 슬라이드 3개 + 여백 */
   height: 553px;
   position: absolute;
   top: 40px;
   left: 50%;
-  margin-left: calc((819px * 3 + 20px) / -2);
+  margin-left: calc((819px * 3 + 20px) / -2); /* 가운데 정렬 */
 }
 .notice .promotion .swiper-slide {
-  opacity: .5;
+  opacity: 0.5;
   transition: opacity 1s;
   position: relative;
 }
 .notice .promotion .swiper-slide-active {
-  opacity: 1;
+  opacity: 1; /* 가운데 슬라이드는 더 밝게 표시 */
 }
 .notice .promotion .swiper-slide .btn {
   position: absolute;
@@ -451,7 +451,7 @@ header .badges .badge{
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: .4s;  
+  transition: 0.4s;
 }
 .notice .promotion .swiper-prev {
   left: 50%;
@@ -467,7 +467,9 @@ header .badges .badge{
   color: #fff;
 }
 
-/* REWARDS */
+/* ========================= */
+/* REWARDS (리워드 영역) */
+/* ========================= */
 .rewards {
   position: relative;
 }
@@ -479,7 +481,7 @@ header .badges .badge{
   top: 0;
   left: 0;
 }
-.rewards .bg-right{
+.rewards .bg-right {
   width: 50%;
   height: 100%;
   background-color: #d5c798;
@@ -487,7 +489,7 @@ header .badges .badge{
   top: 0;
   right: 0;
 }
-.rewards .inner{
+.rewards .inner {
   background-image: url("../images/rewards.jpg");
   height: 241px;
 }
@@ -510,29 +512,30 @@ header .badges .badge{
   flex-grow: 1;
 }
 
+/* YOUTUBE SECTION */
 .youtube {
   position: relative;
   height: 700px;
   background-color: #333;
   overflow: hidden;
 }
-.youtube .youtube__area{
+.youtube .youtube__area {
   width: 1920px;
   background-color: orange;
   position: absolute;
   left: 50%;
   margin-left: calc(1920px / -2);
   top: 50%;
-  margin-top: calc(1920px * 9 / 16 / -2);
+  margin-top: calc(1920px * 9 / 16 / -2); /* 16:9 비율 유지 */
 }
 .youtube .youtube__area::before {
   content: "";
   display: block;
   width: 100%;
   height: 0;
-  padding-top: 56.25%;
+  padding-top: 56.25%; /* 16:9 비율용 패딩 박스 */
 }
-.youtube .youtube__cover{
+.youtube .youtube__cover {
   background-image: url("../images//video_cover_pattern.png");
   background-color: rgba(0,0,0,.3);
   position: absolute;
