add : season-product

--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,6 @@ body {
   font-weight: 400;                   /* 보통 두께 */
   line-height: 1.4;                   /* 줄 간격: 가독성 확보 */
   font-family: "Nanum Gothic", sans-serif; /* 기본 폰트 지정 */
-  height: 3000px;
 }
 img {
   display: block;                     /* 이미지 하단 공백 제거 (inline 성격 제거) */
@@ -550,4 +549,44 @@ header .badges .badge {
   position:  absolute;
   top: 0;
   left: 0;
+}
+.youtube .inner {
+  height: inherit;
+}
+.youtube .floating1 {
+  position: absolute;
+  top: 50px;
+  left: 0;
+}
+.youtube .floating2 {
+  position: absolute;
+  top: 350px;
+  left: 150px;
+}
+
+/* SEASON PRODUCT */
+.season-product {
+  background-image: url("../images/season_product_bg.jpg");
+}
+.season-product .inner{
+  height: 400px;
+}
+.season-product .floating3 {
+  position: absolute;
+  top: -200px;
+  right: 0;
+}
+.season-product .text-group{
+  position: absolute;
+  top: 110px;
+  right: 100px;
+}
+.season-product .text-group .title{
+  margin-bottom: 10px;
+}
+.season-product .text-group .description{
+  margin-bottom: 15px;
+}
+.season-product .text-group .more{
+
 }
